--- a/conda/cebra_paper.yml
+++ b/conda/cebra_paper.yml
@@ -26,26 +26,28 @@
 #Mac non-M1, also just install tensorflow=2.2
 #Mac M1 chip requires a rosetta compatible build.
 
+
 name: cebra_paper
 channels:
     - pytorch-lts
+    - pytorch
     - defaults
 dependencies:
-    - python==3.8
+    - python==3.10.13
     - pip
     - pytorch
     - nb_conda
+    - keras
+    - tensorflow
+    - umap-learn
+    - opentsne
+    - torchvision
+    - scipy
+    - joblib
+    - scikit-learn
     - pip:
         - "cebra[dev,integrations,datasets,demos]"
-        - joblib
         - literate-dataclasses
-        - sklearn
-        - scipy
-        - torch
-        - keras==2.3.1
-        - tensorflow==2.2
-        - umap-learn
-        - opentsne
         - tqdm
         - h5py
         - pandas
